--- a/template.yaml
+++ b/template.yaml
@@ -11,20 +11,26 @@ Globals:
     Timeout: 3
 
 Resources:
-  HelloWorldFunction:
+  Ledger:
+    Type: "AWS::QLDB::Ledger"
+    Properties:
+      DeletionProtection: false
+      PermissionsMode: "STANDARD"
+
+  GraphqlFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
-      CodeUri: hello-world/
-      Handler: app.lambdaHandler
       Runtime: nodejs16.x
-      Architectures:
-        - x86_64
+      Handler: src/graphql.handler
+      Environment:
+        Variables:
+          LEDGER_NAME: !Ref Ledger
       Events:
-        HelloWorld:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+        AnyRequest:
+          Type: Api
           Properties:
-            Path: /hello
-            Method: get
+            Path: /graphql
+            Method: ANY
     Metadata: # Manage esbuild properties
       BuildMethod: esbuild
       BuildProperties:
@@ -32,18 +38,9 @@ Resources:
         Target: "es2020"
         # Sourcemap: true # Enabling source maps will create the required NODE_OPTIONS environment variables on your lambda function during sam build
         EntryPoints: 
-        - app.ts
+        - src/graphql.ts
 
 Outputs:
-  # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
-  # Find out more about other implicit resources you can reference within SAM
-  # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
   HelloWorldApi:
     Description: "API Gateway endpoint URL for Prod stage for Hello World function"
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
-  HelloWorldFunction:
-    Description: "Hello World Lambda Function ARN"
-    Value: !GetAtt HelloWorldFunction.Arn
-  HelloWorldFunctionIamRole:
-    Description: "Implicit IAM Role created for Hello World function"
-    Value: !GetAtt HelloWorldFunctionRole.Arn
+    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/graphql/"
