--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
   "author": "SAM CLI",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-qldb": "^3.186.0",
+    "@aws-sdk/client-qldb-session": "^3.186.0",
+    "amazon-qldb-driver-nodejs": "^3.0.0",
     "apollo-server-lambda": "^3.10.3",
     "esbuild": "^0.14.14",
-    "graphql": "^16.6.0"
+    "graphql": "^16.6.0",
+    "ion-js": "^4.3.0",
+    "jsbi": "^3.2.5"
   },
   "scripts": {
     "unit": "jest",
